--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-graphql": "^0.12.0",
     "fullcalendar": "^5.5.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
