--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "CS 441 Software Engineering Semester Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node  Testing/index.js",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -25,10 +25,15 @@
     "express-graphql": "^0.12.0",
     "fullcalendar": "^5.5.1",
     "graphql": "^15.5.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.5",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
